tests/snapshots/test_ro__get_drive-2.snap
---
source: tests/test_ro.rs
expression: "&drive2"
---
Drive {
    id: Some(
        DriveId(
            "b!-RIj2DuyvEyV1T4NlOaMHk8XkS_I8MdFlUCq1BlcjgmhRfAj3-Z8RY2VpuvV_tpd",
        ),
    ),
    created_by: None,
    created_date_time: None,
    description: None,
    drive_type: None,
    items: None,
    last_modified_by: None,
    last_modified_date_time: None,
    name: None,
    owner: Some(
        Object(
            {
                "user": Object(
                    {
                        "displayName": String(
                            "Megan Bowen",
                        ),
                        "email": String(
                            "MeganB@M365x214355.onmicrosoft.com",
                        ),
                        "id": String(
                            "48d31887-5fad-4d73-a9f5-3c356e68a038",
                        ),
                    },
                ),
            },
        ),
    ),
    quota: None,
    root: None,
    sharepoint_ids: None,
    special: None,
    system: None,
    web_url: None,
    _private: (),
}
