tests/snapshots/test_ro__get_item-2.snap
---
source: tests/test_ro.rs
expression: "&item_custom"
---
DriveItem {
    audio: None,
    content: None,
    c_tag: None,
    deleted: None,
    description: None,
    file: None,
    file_system_info: None,
    folder: None,
    image: None,
    location: None,
    package: None,
    photo: None,
    publication: None,
    remote_item: None,
    root: None,
    search_result: None,
    shared: None,
    sharepoint_ids: None,
    size: None,
    special_folder: None,
    video: None,
    web_dav_url: None,
    children: Some(
        [
            DriveItem {
                audio: None,
                content: None,
                c_tag: None,
                deleted: None,
                description: None,
                file: None,
                file_system_info: None,
                folder: None,
                image: None,
                location: None,
                package: None,
                photo: None,
                publication: None,
                remote_item: None,
                root: None,
                search_result: None,
                shared: None,
                sharepoint_ids: None,
                size: None,
                special_folder: None,
                video: None,
                web_dav_url: None,
                children: None,
                created_by_user: None,
                last_modified_by_user: None,
                permissions: None,
                thumbnails: None,
                versions: None,
                id: Some(
                    ItemId(
                        "01BYE5RZ35EU76DRTYZ5DK5DATNBSRPLC7",
                    ),
                ),
                created_by: None,
                created_date_time: None,
                e_tag: None,
                last_modified_by: None,
                last_modified_date_time: None,
                name: None,
                parent_reference: None,
                web_url: None,
                download_url: None,
                _private: (),
            },
            DriveItem {
                audio: None,
                content: None,
                c_tag: None,
                deleted: None,
                description: None,
                file: None,
                file_system_info: None,
                folder: None,
                image: None,
                location: None,
                package: None,
                photo: None,
                publication: None,
                remote_item: None,
                root: None,
                search_result: None,
                shared: None,
                sharepoint_ids: None,
                size: None,
                special_folder: None,
                video: None,
                web_dav_url: None,
                children: None,
                created_by_user: None,
                last_modified_by_user: None,
                permissions: None,
                thumbnails: None,
                versions: None,
                id: Some(
                    ItemId(
                        "01BYE5RZ6BHVONAVANA5BIO4HDX3GVTARN",
                    ),
                ),
                created_by: None,
                created_date_time: None,
                e_tag: None,
                last_modified_by: None,
                last_modified_date_time: None,
                name: None,
                parent_reference: None,
                web_url: None,
                download_url: None,
                _private: (),
            },
        ],
    ),
    created_by_user: None,
    last_modified_by_user: None,
    permissions: None,
    thumbnails: None,
    versions: None,
    id: Some(
        ItemId(
            "01BYE5RZ5YOS4CWLFWORAJ4U63SCA3JT5P",
        ),
    ),
    created_by: None,
    created_date_time: None,
    e_tag: None,
    last_modified_by: None,
    last_modified_date_time: None,
    name: None,
    parent_reference: None,
    web_url: None,
    download_url: None,
    _private: (),
}
