tests/snapshots/test_ro__get_item.snap
---
source: tests/test_ro.rs
expression: "&item_by_path"
---
DriveItem {
    audio: None,
    content: None,
    c_tag: Some(
        Tag(
            "\"c:{2BB874B8-B62C-4074-9E53-DB9081B4CFAF},0\"",
        ),
    ),
    deleted: None,
    description: None,
    file: None,
    file_system_info: Some(
        Object(
            {
                "createdDateTime": String(
                    "2017-09-15T01:15:43Z",
                ),
                "lastModifiedDateTime": String(
                    "2017-09-15T01:15:43Z",
                ),
            },
        ),
    ),
    folder: Some(
        Object(
            {
                "childCount": Number(
                    2,
                ),
            },
        ),
    ),
    image: None,
    location: None,
    package: None,
    photo: None,
    publication: None,
    remote_item: None,
    root: None,
    search_result: None,
    shared: None,
    sharepoint_ids: None,
    size: Some(
        22842,
    ),
    special_folder: None,
    video: None,
    web_dav_url: None,
    children: None,
    created_by_user: None,
    last_modified_by_user: None,
    permissions: None,
    thumbnails: None,
    versions: None,
    id: Some(
        ItemId(
            "01BYE5RZ5YOS4CWLFWORAJ4U63SCA3JT5P",
        ),
    ),
    created_by: Some(
        Object(
            {
                "application": Object(
                    {
                        "displayName": String(
                            "OneNote",
                        ),
                        "id": String(
                            "2d4d3d8e-2be3-4bef-9f87-7875a61c29de",
                        ),
                    },
                ),
                "user": Object(
                    {
                        "displayName": String(
                            "Megan Bowen",
                        ),
                        "email": String(
                            "MeganB@M365x214355.onmicrosoft.com",
                        ),
                        "id": String(
                            "48d31887-5fad-4d73-a9f5-3c356e68a038",
                        ),
                    },
                ),
            },
        ),
    ),
    created_date_time: Some(
        "2017-09-15T01:15:43Z",
    ),
    e_tag: Some(
        Tag(
            "\"{2BB874B8-B62C-4074-9E53-DB9081B4CFAF},1\"",
        ),
    ),
    last_modified_by: Some(
        Object(
            {
                "application": Object(
                    {
                        "displayName": String(
                            "OneNote",
                        ),
                        "id": String(
                            "2d4d3d8e-2be3-4bef-9f87-7875a61c29de",
                        ),
                    },
                ),
                "user": Object(
                    {
                        "displayName": String(
                            "Megan Bowen",
                        ),
                        "email": String(
                            "MeganB@M365x214355.onmicrosoft.com",
                        ),
                        "id": String(
                            "48d31887-5fad-4d73-a9f5-3c356e68a038",
                        ),
                    },
                ),
            },
        ),
    ),
    last_modified_date_time: Some(
        "2017-09-15T01:15:43Z",
    ),
    name: Some(
        "Notebooks",
    ),
    parent_reference: Some(
        Object(
            {
                "driveId": String(
                    "b!-RIj2DuyvEyV1T4NlOaMHk8XkS_I8MdFlUCq1BlcjgmhRfAj3-Z8RY2VpuvV_tpd",
                ),
                "driveType": String(
                    "business",
                ),
                "id": String(
                    "01BYE5RZ56Y2GOVW7725BZO354PWSELRRZ",
                ),
                "path": String(
                    "/drive/root:",
                ),
            },
        ),
    ),
    web_url: None,
    download_url: None,
    _private: (),
}
