tests/snapshots/test_ro__list_children.snap
---
source: tests/test_ro.rs
expression: "&items"
---
[
    DriveItem {
        audio: None,
        content: None,
        c_tag: Some(
            Tag(
                "\"c:{E13F257D-78C6-46CF-AE8C-13686517AC5F},0\"",
            ),
        ),
        deleted: None,
        description: None,
        file: None,
        file_system_info: Some(
            Object(
                {
                    "createdDateTime": String(
                        "2017-09-15T01:15:44Z",
                    ),
                    "lastModifiedDateTime": String(
                        "2017-09-15T01:15:44Z",
                    ),
                },
            ),
        ),
        folder: None,
        image: None,
        location: None,
        package: Some(
            Object(
                {
                    "type": String(
                        "oneNote",
                    ),
                },
            ),
        ),
        photo: None,
        publication: None,
        remote_item: None,
        root: None,
        search_result: None,
        shared: None,
        sharepoint_ids: None,
        size: Some(
            15261,
        ),
        special_folder: None,
        video: None,
        web_dav_url: None,
        children: None,
        created_by_user: None,
        last_modified_by_user: None,
        permissions: None,
        thumbnails: None,
        versions: None,
        id: Some(
            ItemId(
                "01BYE5RZ35EU76DRTYZ5DK5DATNBSRPLC7",
            ),
        ),
        created_by: Some(
            Object(
                {
                    "application": Object(
                        {
                            "displayName": String(
                                "OneNote",
                            ),
                            "id": String(
                                "2d4d3d8e-2be3-4bef-9f87-7875a61c29de",
                            ),
                        },
                    ),
                    "user": Object(
                        {
                            "displayName": String(
                                "Megan Bowen",
                            ),
                            "email": String(
                                "MeganB@M365x214355.onmicrosoft.com",
                            ),
                            "id": String(
                                "48d31887-5fad-4d73-a9f5-3c356e68a038",
                            ),
                        },
                    ),
                },
            ),
        ),
        created_date_time: Some(
            "2017-09-15T01:15:44Z",
        ),
        e_tag: Some(
            Tag(
                "\"{E13F257D-78C6-46CF-AE8C-13686517AC5F},1\"",
            ),
        ),
        last_modified_by: Some(
            Object(
                {
                    "application": Object(
                        {
                            "displayName": String(
                                "OneNote",
                            ),
                            "id": String(
                                "2d4d3d8e-2be3-4bef-9f87-7875a61c29de",
                            ),
                        },
                    ),
                    "user": Object(
                        {
                            "displayName": String(
                                "Megan Bowen",
                            ),
                            "email": String(
                                "MeganB@M365x214355.onmicrosoft.com",
                            ),
                            "id": String(
                                "48d31887-5fad-4d73-a9f5-3c356e68a038",
                            ),
                        },
                    ),
                },
            ),
        ),
        last_modified_date_time: Some(
            "2017-09-15T01:15:44Z",
        ),
        name: Some(
            "Megan @ Work",
        ),
        parent_reference: Some(
            Object(
                {
                    "driveId": String(
                        "b!-RIj2DuyvEyV1T4NlOaMHk8XkS_I8MdFlUCq1BlcjgmhRfAj3-Z8RY2VpuvV_tpd",
                    ),
                    "driveType": String(
                        "business",
                    ),
                    "id": String(
                        "01BYE5RZ5YOS4CWLFWORAJ4U63SCA3JT5P",
                    ),
                    "path": String(
                        "/drive/root:/Notebooks",
                    ),
                },
            ),
        ),
        web_url: None,
        download_url: None,
        _private: (),
    },
    DriveItem {
        audio: None,
        content: None,
        c_tag: Some(
            Tag(
                "\"c:{D05C3DC1-0D54-4207-8770-E3BECD59822D},0\"",
            ),
        ),
        deleted: None,
        description: None,
        file: None,
        file_system_info: Some(
            Object(
                {
                    "createdDateTime": String(
                        "2018-03-27T03:37:55Z",
                    ),
                    "lastModifiedDateTime": String(
                        "2018-03-27T03:37:55Z",
                    ),
                },
            ),
        ),
        folder: None,
        image: None,
        location: None,
        package: Some(
            Object(
                {
                    "type": String(
                        "oneNote",
                    ),
                },
            ),
        ),
        photo: None,
        publication: None,
        remote_item: None,
        root: None,
        search_result: None,
        shared: None,
        sharepoint_ids: None,
        size: Some(
            7581,
        ),
        special_folder: None,
        video: None,
        web_dav_url: None,
        children: None,
        created_by_user: None,
        last_modified_by_user: None,
        permissions: None,
        thumbnails: None,
        versions: None,
        id: Some(
            ItemId(
                "01BYE5RZ6BHVONAVANA5BIO4HDX3GVTARN",
            ),
        ),
        created_by: Some(
            Object(
                {
                    "application": Object(
                        {
                            "displayName": String(
                                "OneNote",
                            ),
                            "id": String(
                                "2d4d3d8e-2be3-4bef-9f87-7875a61c29de",
                            ),
                        },
                    ),
                    "user": Object(
                        {
                            "displayName": String(
                                "Megan Bowen",
                            ),
                            "email": String(
                                "MeganB@M365x214355.onmicrosoft.com",
                            ),
                            "id": String(
                                "48d31887-5fad-4d73-a9f5-3c356e68a038",
                            ),
                        },
                    ),
                },
            ),
        ),
        created_date_time: Some(
            "2018-03-27T03:37:55Z",
        ),
        e_tag: Some(
            Tag(
                "\"{D05C3DC1-0D54-4207-8770-E3BECD59822D},1\"",
            ),
        ),
        last_modified_by: Some(
            Object(
                {
                    "application": Object(
                        {
                            "displayName": String(
                                "OneNote",
                            ),
                            "id": String(
                                "2d4d3d8e-2be3-4bef-9f87-7875a61c29de",
                            ),
                        },
                    ),
                    "user": Object(
                        {
                            "displayName": String(
                                "Megan Bowen",
                            ),
                            "email": String(
                                "MeganB@M365x214355.onmicrosoft.com",
                            ),
                            "id": String(
                                "48d31887-5fad-4d73-a9f5-3c356e68a038",
                            ),
                        },
                    ),
                },
            ),
        ),
        last_modified_date_time: Some(
            "2018-03-27T03:37:55Z",
        ),
        name: Some(
            "TeamsNotebook(Shared)",
        ),
        parent_reference: Some(
            Object(
                {
                    "driveId": String(
                        "b!-RIj2DuyvEyV1T4NlOaMHk8XkS_I8MdFlUCq1BlcjgmhRfAj3-Z8RY2VpuvV_tpd",
                    ),
                    "driveType": String(
                        "business",
                    ),
                    "id": String(
                        "01BYE5RZ5YOS4CWLFWORAJ4U63SCA3JT5P",
                    ),
                    "path": String(
                        "/drive/root:/Notebooks",
                    ),
                },
            ),
        ),
        web_url: None,
        download_url: None,
        _private: (),
    },
]
